# Tokenized-Yield-Infrastructure

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
anchor/: Anchor.toml  DEPLOYMENT_REPORT.md  NUMERICAL_STABILITY.md  PROTOCOL_INVARIANTS.md  SECURITY_ASSUMPTIONS.md  STATE_MACHINE.md  THREAT_MODEL.md  UPGRADE_POLICY.md
anchor/programs/tokenized-yield/: Cargo.toml
anchor/programs/tokenized-yield/src/: constants.rs  error.rs  lib.rs
anchor/programs/tokenized-yield/src/instructions/: deposit_revenue.rs  harvest.rs  initialize_vault.rs  mint_shares.rs  mod.rs  redeem_shares.rs  revoke_authority.rs  transfer_authority.rs  update_performance_fee.rs  update_treasury.rs
anchor/programs/tokenized-yield/src/states/: mod.rs  user_stake.rs  vault.rs
anchor/src/: index.ts  tokenized-yield-exports.ts
anchor/tests/: tokenized-yield.test.ts
scripts/: devnet-deploy.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/create-vault/: page.tsx
src/app/dashboard/: page.tsx
src/components/: Navigation.tsx
src/components/dashboard/: CapitalSegregation.tsx  EventTimeline.tsx  GovernanceStatusBadge.tsx  InvariantMonitor.tsx  ProtocolOverview.tsx  index.ts
src/components/home/: Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx
src/components/providers/: layout-provider.tsx  solana-provider.tsx
src/components/ui/: progress.tsx  skeleton.tsx
